# Projec-Otus

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_exec
data/: commands_for_work_7.txt
src/work_2_FilterIP/: CMakeLists.txt  ip.cpp  main.cpp
src/work_3_allocator/: CMakeLists.txt  allocator.h  list.h  run.cpp
src/work_4_SFINAE/: CMakeLists.txt  lib.h  run.cpp
src/work_5/: CMakeLists.txt  controller.h  interface.h  lib.cpp  lib.h  model.h
src/work_6/: CMakeLists.txt  infinite_matrix.h
src/work_7/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  run.cpp
src/work_8/: CMakeLists.txt  identical.cpp  identical.h
